// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkersPage filters out workers from diferent domains 1`] = `
<section
  className="app-page js-service-workers-page "
>
  <RegistrationList
    canDebugWorkers={true}
    workers={
      Array [
        Object {
          "active": true,
          "id": "id-worker-1-example",
          "name": "worker1",
          "registrationFront": "",
          "scope": "SCOPE 123",
          "state": 0,
          "url": "http://example.com/worker.js",
          "workerTargetFront": "",
        },
        Object {
          "active": false,
          "id": "id-worker-2-example",
          "name": "worker2",
          "registrationFront": "",
          "scope": "SCOPE 456",
          "state": 0,
          "url": "http://example.com/worker.js",
          "workerTargetFront": "",
        },
      ]
    }
  />
</section>
`;

exports[`WorkersPage filters out workers from different domains and renders an empty list when there is none left 1`] = `
<section
  className="app-page js-service-workers-page app-page--empty"
>
  <RegistrationListEmpty />
</section>
`;

exports[`WorkersPage it renders a list with a single element if there's just 1 worker 1`] = `
<section
  className="app-page js-service-workers-page "
>
  <RegistrationList
    canDebugWorkers={true}
    workers={
      Array [
        Object {
          "active": true,
          "id": "id-worker-1-example",
          "name": "worker1",
          "registrationFront": "",
          "scope": "SCOPE 123",
          "state": 0,
          "url": "http://example.com/worker.js",
          "workerTargetFront": "",
        },
      ]
    }
  />
</section>
`;

exports[`WorkersPage renders a list with multiple elements when there are multiple workers 1`] = `
<section
  className="app-page js-service-workers-page "
>
  <RegistrationList
    canDebugWorkers={true}
    workers={
      Array [
        Object {
          "active": true,
          "id": "id-worker-1-example",
          "name": "worker1",
          "registrationFront": "",
          "scope": "SCOPE 123",
          "state": 0,
          "url": "http://example.com/worker.js",
          "workerTargetFront": "",
        },
        Object {
          "active": false,
          "id": "id-worker-2-example",
          "name": "worker2",
          "registrationFront": "",
          "scope": "SCOPE 456",
          "state": 0,
          "url": "http://example.com/worker.js",
          "workerTargetFront": "",
        },
        Object {
          "active": true,
          "id": "id-worker-3-example",
          "name": "worker3",
          "registrationFront": "",
          "scope": "SCOPE 789",
          "state": 0,
          "url": "http://example.com/worker.js",
          "workerTargetFront": "",
        },
      ]
    }
  />
</section>
`;

exports[`WorkersPage renders an empty list if there are no workers 1`] = `
<section
  className="app-page js-service-workers-page app-page--empty"
>
  <RegistrationListEmpty />
</section>
`;
